--- a/DjangoProject/authenticationapp/templates/authenticationapp/index.html
+++ b/DjangoProject/authenticationapp/templates/authenticationapp/index.html
@@ -11,6 +11,7 @@
         </div>
         <div class="container">
             <h3><a href="admin/" >Admin </a></h3>
+            <h3><a href="bookmarks/folders/">Bookmarks App</a></h3>
         </div>
     </body>
 </html>
