- Added create view - Added create view template - Blocked accessing create view for Anonymous user - Show error if user tries to add same folder again - Added TestCases for create view

--- a/DjangoProject/bookmarks/static/bookmarks/main.css
+++ b/DjangoProject/bookmarks/static/bookmarks/main.css
@@ -140,6 +140,9 @@ main >.folders >.folder> .folder-content{
     background: #D0D1CF;
     box-shadow:0 0 25px 4px blue;
 }
+main>.folders>.folder>.folder-content>.name{
+    text-transform: capitalize;
+}
 main .folders .folder .folder-content .count{
     margin-left: auto;
 }
@@ -176,4 +179,3 @@ main >.bookmarks >.bookmark:hover >a{
     font-size: 1.3em;
     color: white;
 }
-
