Change app name bookmarksapp->bookmarks

--- a/DjangoProject/bookmarks/templates/bookmarks/folderlist.html
+++ b/DjangoProject/bookmarks/templates/bookmarks/folderlist.html
@@ -1,4 +1,4 @@
-{% extends 'bookmarksapp/base.html' %}
+{% extends 'bookmarks/base.html' %}
 {% load static %}
 {% block content %}
     <div class="folders">
