Add Pagination to folderslist

--- a/DjangoProject/bookmarks/templates/bookmarks/base.html
+++ b/DjangoProject/bookmarks/templates/bookmarks/base.html
@@ -25,7 +25,9 @@
                 {% endblock %}
             </main>
             <footer>
-                <span>Copyright &copy; 2018</span>
+                {% block footer %}
+
+                {% endblock %}
             </footer>
         </div>
     </body>
