--- a/DjangoProject/bookmarks/static/bookmarks/main.css
+++ b/DjangoProject/bookmarks/static/bookmarks/main.css
@@ -22,11 +22,11 @@ body{
 #container{
     display: grid;
     min-height: 100vh;
-    grid-template-columns: 150px 1fr;
+    grid-template-columns: 110px 1fr 110px;
     grid-template-rows: 60px 1fr 50px;
-    grid-template-areas: 'nav nav'
-                         'aside main'
-                         'aside footer';
+    grid-template-areas: 'nav nav nav'
+                         'l_aside main r_aside'
+                         'l_aside footer r_aside';
 }
 nav{
     height: 60px;
@@ -60,14 +60,14 @@ nav a:hover{
     font-size: 30px;
     
 }
-aside{
+.l_aside{
     border-right: 1px solid black;
-    grid-area: aside;
+    grid-area: l_aside;
     background: #CECCCC;
     display: flex;
     flex-direction: column;
 }
-aside>.title{
+.l_aside>.title{
     padding: 0 1em;
     padding-bottom: 1em;
     border-bottom: 1px solid black;
@@ -77,7 +77,7 @@ aside>.title{
     letter-spacing: 1px;
     font-size:1.4em;
 }
-aside>a{
+.l_aside>a{
     border-bottom: 1px solid black;
     text-decoration: none;
     padding: 0.5em;
@@ -87,7 +87,7 @@ aside>a{
     transition-property: all;
     transition-duration: 0.3s;
 }
-aside>a:hover{
+.l_aside>a:hover{
     background: #605F5E;
     border-right: 10px solid red;
     color: white;
@@ -178,4 +178,49 @@ main >.bookmarks >.bookmark:hover >.name,
 main >.bookmarks >.bookmark:hover >a{
     font-size: 1.3em;
     color: white;
+}
+#folder{
+    flex: auto;
+    align-items: center;
+}
+#folder:hover{
+    font-size: 1em;
+    border-radius: 1em;
+    background:transparent;
+    box-shadow:0 0 0px 0px;
+}
+#folder-content{
+    display: grid;
+}
+.r_aside{
+    border-right: 1px solid black;
+    grid-area: r_aside;
+    background: #CECCCC;
+    display: flex;
+    flex-direction: column;
+}
+.r_aside>#title{
+    padding-bottom: 1em;
+    border-bottom: 1px solid black;
+    text-align: center;
+    color: black;
+    text-transform: capitalize;
+    letter-spacing: 1px;
+    font-size:1.4em;
+}
+.r_aside>a{
+    border-bottom: 1px solid black;
+    text-decoration: none;
+    padding: 0.5em;
+    font-size:1.2em;
+    color: blue;
+    text-align: center;
+    transition-property: all;
+    transition-duration: 0.3s;
+}
+.r_aside>a:hover{
+    background: #605F5E;
+    border-left: 10px solid red;
+    color: white;
+    font-size: 25px;
 }
