--- a/DjangoProject/bookmarks/templates/bookmarks/folderlist.html
+++ b/DjangoProject/bookmarks/templates/bookmarks/folderlist.html
@@ -23,6 +23,13 @@
     </div>
 {% endblock %}
 
+{% block r_aside %}
+    <div id="title">Actions</div>
+    <a href="{% url 'bookmarks:create-folder' %}">Create</a>
+    <a href="#">Not</a>
+    <a href="#">Not</a>
+{% endblock %}
+
 {% block footer %}
 <span>
 {% if is_paginated %}
