--- a/DjangoProject/bookmarks/templates/bookmarks/bookmarks-list.html
+++ b/DjangoProject/bookmarks/templates/bookmarks/bookmarks-list.html
@@ -18,6 +18,13 @@
     </div>
 {% endblock %}
 
+{% block r_aside %}
+    <div id="title">Actions</div>
+    <a href="create/">Create</a>
+    <a href="#">Not</a>
+    <a href="#">Not</a>
+{% endblock %}
+
 {% block footer %}
 <span>
 {% if is_paginated %}
