--- a/DjangoProject/bookmarks/templates/bookmarks/invalid_bookmark_form.html
+++ b/DjangoProject/bookmarks/templates/bookmarks/invalid_bookmark_form.html
@@ -1,4 +1,4 @@
-{% extends 'bookmarks/folder_form.html'%}
+{% extends 'bookmarks/bookmark_form.html'%}
 {% block invalid %}
     <div id="invalid" style="color:red">{{ error }}</div>
     <script>
