--- a/DjangoProject/bookmarks/templates/bookmarks/folder_update_form.html
+++ b/DjangoProject/bookmarks/templates/bookmarks/folder_update_form.html
@@ -14,7 +14,7 @@
 
                     {% endblock %}
                     <div class="name">Name:</div>
-                    <input type="text" form="form1" name="name">
+                    <input type="text" form="form1" name="name" value="{{form.name.value}}">
                     <input type="submit" form="form1" value="Save">
                 </div>
             </div>
