--- a/DjangoProject/bookmarks/templates/bookmarks/bookmark_form.html
+++ b/DjangoProject/bookmarks/templates/bookmarks/bookmark_form.html
@@ -1,14 +1,12 @@
 {% extends 'bookmarks/base.html' %}
 {% load static %}
-{% block aside %}
-    <div class="title">Create</div>
-{% endblock %}
 {% block content %}
     <form method="Post" id="form1">
         {% csrf_token %}
     </form>
     <div id="bookmarks">
             <div id="bookmark" >
+                <h3>Create Bookmark</h3>
                 <div>Name:
                     <input name="name" type="text" form="form1">
                 </div>
