--- a/DjangoProject/bookmarks/templates/bookmarks/bookmarks-list.html
+++ b/DjangoProject/bookmarks/templates/bookmarks/bookmarks-list.html
@@ -31,18 +31,14 @@
 {% if is_paginated %}
     <div class="pagination">
         <span class="page-links">
-            {% if page_obj.has_previous and sort %}
-                <a href="?sort={{sort}}&page={{ page_obj.previous_page_number }}">Previous</a>
-            {% elif page_obj.has_previous %}
-                <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
+            {% if page_obj.has_previous%}
+            <button name="page" value="{{ page_obj.previous_page_number }}" form="filter_form" >Previous</button>
             {% endif %}
             <span class="page-current">
                 Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
             </span>
-            {% if page_obj.has_next and sort %}
-                <a href="?sort={{sort}}&page={{ page_obj.next_page_number }}">Next</a>
-            {% elif page_obj.has_next %}
-                <a href="?page={{ page_obj.next_page_number }}">Previous</a>
+            {% if page_obj.has_next %}
+               <button name="page" value="{{ page_obj.next_page_number }}" form="filter_form" >Next</button>
             {% endif %}
         </span>
     </div>
