Refactor Authenticationapp to Authentication

--- a/DjangoProject/authentication/templates/authentication/index.html
+++ b/DjangoProject/authentication/templates/authentication/index.html
@@ -6,7 +6,7 @@
         <div class="jumbotron">
             <h1 class="display-4"  style="text-align:center" >List of Apps </h1>
             <div class="float-right">
-                <a class="btn btn-outline-success my-2 my-sm-0" href="{% url 'authenticationapp:logout' %}">Logout</a>
+                <a class="btn btn-outline-success my-2 my-sm-0" href="{% url 'authentication:logout' %}">Logout</a>
             </div>
         </div>
         <div class="container">
