--- a/DjangoProject/authentication/templates/authentication/invalidlogin.html
+++ b/DjangoProject/authentication/templates/authentication/invalidlogin.html
@@ -1,4 +1,4 @@
-{% extends "authenticationapp/login.html" %}
+{% extends "authentication/login.html" %}
 {% block invalid %}
     <p id = "message" style="color: red;"> Invalid Credentials entered</p>
     <script>
