--- a/DjangoProject/authentication/templates/authentication/base.html
+++ b/DjangoProject/authentication/templates/authentication/base.html
@@ -10,8 +10,8 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     </ul>
-                    <a class="btn btn-outline-success my-2 my-sm-0" href="{% url 'authenticationapp:signup' %}">Signup</a>
-                    <a class="btn btn-outline-success my-2 my-sm-0" href="{% url 'authenticationapp:login' %}">Login</a>
+                    <a class="btn btn-outline-success my-2 my-sm-0" href="{% url 'authentication:signup' %}">Signup</a>
+                    <a class="btn btn-outline-success my-2 my-sm-0" href="{% url 'authentication:login' %}">Login</a>
                 </div>
             </nav>
         </header>
