--- a/DjangoProject/authentication/templates/authentication/signup.html
+++ b/DjangoProject/authentication/templates/authentication/signup.html
@@ -1,4 +1,4 @@
-{% extends "authenticationapp/base.html"%}
+{% extends "authentication/base.html"%}
 {% load crispy_forms_tags %}
 {% block container%}
 <div class="col-5">
