--- a/DjangoProject/authentication/templates/authentication/base.html
+++ b/DjangoProject/authentication/templates/authentication/base.html
@@ -7,23 +7,14 @@
     <body>
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    </ul>
-                    <a class="btn btn-outline-success my-2 my-sm-0" href="{% url 'authentication:signup' %}">Signup</a>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02" style="justify-content: flex-end;">
+                    <a class="btn btn-outline-success my-2 my-sm-0" style="margin :5px;" href="{% url 'authentication:signup' %}">Signup</a>
                     <a class="btn btn-outline-success my-2 my-sm-0" href="{% url 'authentication:login' %}">Login</a>
                 </div>
             </nav>
         </header>
-        {% block content %}
+        {% block container %}
 
         {% endblock %}
-        <div class="container">
-            <div class="row justify-content-center">
-                {% block container %}
-
-                {% endblock %}
-            </div>
-        </div>
     </body>
 </html>
