--- a/DjangoProject/authentication/templates/authentication/login.html
+++ b/DjangoProject/authentication/templates/authentication/login.html
@@ -1,17 +1,32 @@
-{% extends "authentication/base.html"%}
-{% load crispy_forms_tags %}
-{% block container%}
-    <div class="col-4">
-        <h1 class="mt-2">Login</h1>
-        <hr class="mt-0 mb-4">
-        <form action = "{% url 'authentication:login' %}" method="POST" >
-            {% csrf_token %}
-            <p class="form-inline" ><label for="id_username">Username:</label> <input type="text" class="form-control" name="username" autofocus required id="id_username"></p>
-            <p class="form-inline" ><label for="id_password">Password:</label> <input class="form-control" type="password" name="password" required id="id_password"></p>
-            <button class="btn btn-success"  type="submit">Login</button>
-            {% block invalid %}
+<html>
+    <head>
+        {% load static %}
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    </head>
+    <body>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02" style="justify-content: flex-end;">
+                    <a class="btn btn-outline-success my-2 my-sm-0" style="margin :5px;" href="{% url 'authentication:signup' %}">Signup</a>
+                </div>
+            </nav>
+        </header>
+        <div class="container" style="display: flex;justify-content: center;">
+            <div class="col-4">
+                <h1 class="mt-2">Login</h1>
+                <hr class="mt-0 mb-4">
+                <form action = "{% url 'authentication:login' %}" method="POST" id="form">
+                {% csrf_token %}
+                </form>
+                <p class="form-inline" ><label for="id_username">Username:</label> <input form="form" type="text" class="form-control" name="username" autofocus required id="id_username"></p>
+                <p class="form-inline" ><label for="id_password">Password:</label> <input form="form" class="form-control" type="password" name="password" required id="id_password"></p>
+                <button class="btn btn-outline-success my-2 my-sm-0"  form="form" type="submit">Login</button>
+                <a href="#"><button class="btn btn-outline-success my-2 my-sm-0">Forgot Password</button></a>
+                {% block invalid %}
 
-            {% endblock %}
-        </form>
-    </div>
-{% endblock %}
+                {% endblock %}
+            </div>
+        </div>
+    </body>
+</html>
