--- a/DjangoProject/authentication/templates/authentication/signup.html
+++ b/DjangoProject/authentication/templates/authentication/signup.html
@@ -1,13 +1,28 @@
-{% extends "authentication/base.html"%}
-{% load crispy_forms_tags %}
-{% block container%}
-<div class="col-5">
-    <h1 class="mt-2">Signup</h1>
-    <hr class="mt-0 mb-4">
-    <form method="post">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button class="btn btn-success" type="submit">Sign up</button>
-    </form>
-</div>
-{% endblock%}
+<html>
+    <head>
+        {% load static %}
+        {% load crispy_forms_tags %}
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    </head>
+    <body>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02" style="justify-content: flex-end;">
+                    <a class="btn btn-outline-success my-2 my-sm-0" style="margin :5px;" href="{% url 'authentication:signup' %}">Signup</a>
+                </div>
+            </nav>
+        </header>
+        <div class="container" style="display: flex;justify-content: center;">
+            <div class="col-5">
+                <h1 class="mt-2">Signup</h1>
+                <hr class="mt-0 mb-4">
+                <form method="post">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button class="btn btn-success" type="submit">Sign up</button>
+                </form>
+            </div>
+        </div>
+    </body>
+</html>
