--- a/DjangoProject/authentication/templates/authentication/signup.html
+++ b/DjangoProject/authentication/templates/authentication/signup.html
@@ -9,7 +9,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02" style="justify-content: flex-end;">
-                    <a class="btn btn-outline-success my-2 my-sm-0" style="margin :5px;" href="{% url 'authentication:signup' %}">Signup</a>
+                    <a class="btn btn-outline-success my-2 my-sm-0" style="margin :5px;" href="{% url 'authentication:login' %}">Login</a>
                 </div>
             </nav>
         </header>
